--- a/frontend/src/config-examples.json
+++ b/frontend/src/config-examples.json
@@ -1,45 +1,13 @@
 {
   "filters": [
     {
-      "title": "Diseases",
-      "options": [
-        [
-          {
-            "label": "Colon adenocarcinoma",
-            "value": "Colon adenocarcinoma",
-            "ontology": "NCIT:C4349",
-            "type": "ontology",
-            "schemaField": "diseases"
-          }
-        ],
-        [
-          {
-            "label": "Mucinous Adenocarcinoma of the Colon and Rectum",
-            "value": "Mucinous Adenocarcinoma of the Colon and Rectum",
-            "ontology": "NCIT:C7966",
-            "type": "ontology",
-            "schemaField": "diseases"
-          }
-        ],
-        [
-          {
-            "label": "Rectal Adenocarcinoma",
-            "value": "Rectal Adenocarcinoma",
-            "ontology": "NCIT:C9383",
-            "type": "ontology",
-            "schemaField": "diseases"
-          }
-        ]
-      ]
-    },
-    {
       "title": "Demographics",
       "options": [
         [
           {
             "label": "Female",
             "value": "Female",
-            "ontology": "NCIT:C16576",
+            "ontology": "NCIT:C46113",
             "type": "ontology",
             "schemaField": "sex"
           }
@@ -48,7 +16,7 @@
           {
             "label": "Male",
             "value": "Male",
-            "ontology": "NCIT:C20197",
+            "ontology": "NCIT:C46112",
             "type": "ontology",
             "schemaField": "sex"
           }
@@ -61,273 +29,178 @@
             "type": "alphanumeric",
             "schemaField": "diseases.ageOfOnset.iso8601duration"
           }
-        ]
-      ]
-    },
-    {
-      "title": "Treatment",
-      "options": [
+        ],
         [
           {
-            "label": "Radiation Therapy",
-            "value": "Radiation Therapy",
-            "ontology": "NCIT:C15313",
-            "type": "ontology",
-            "schemaField": "treatment"
+            "label": "Weight",
+            "value": "Weight",
+            "ontology": "",
+            "type": "alphanumeric",
+            "schemaField": "diseases.ageOfOnset.iso8601duration"
           }
         ],
         [
           {
-            "label": "Chemotherapy",
-            "value": "Chemotherapy",
-            "ontology": "NCIT:C15632",
-            "type": "ontology",
-            "schemaField": "treatment"
-          }
-        ],
-        [
-          {
-            "label": "Fluorouracil",
-            "value": "Fluorouracil",
-            "ontology": "NCIT:C505",
-            "type": "ontology",
-            "schemaField": "treatment"
-          }
-        ],
-        [
-          {
-            "label": "Oxaliplatin",
-            "value": "Oxaliplatin",
-            "ontology": "NCIT:C1181",
-            "type": "ontology",
-            "schemaField": "treatment"
-          }
-        ],
-        [
-          {
-            "label": "Zoledronic Acid",
-            "value": "Zoledronic Acid",
-            "ontology": "NCIT:C1699",
-            "type": "ontology",
-            "schemaField": "treatment"
-          }
-        ],
-        [
-          {
-            "label": "Irinotecan",
-            "value": "Irinotecan",
-            "ontology": "NCIT:C62040",
-            "type": "ontology",
-            "schemaField": "treatment"
+            "label": "Height",
+            "value": "Height",
+            "ontology": "",
+            "type": "alphanumeric",
+            "schemaField": "diseases.ageOfOnset.iso8601duration"
           }
         ]
       ]
     },
     {
-      "title": "Histopathology",
+      "title": "Intervention",
       "options": [
         [
           {
-            "label": "Ascending colon",
-            "value": "Ascending colon",
-            "ontology": "ICD10:C18.2",
+            "label": "Hospitalization",
+            "value": "Hospitalization",
+            "ontology": "NCIT:C25179",
             "type": "ontology",
-            "schemaField": "histopathology"
+            "schemaField": "interventionsOrProcedures"
           }
         ],
         [
           {
-            "label": "Descending colon",
-            "value": "Descending colon",
-            "ontology": "ICD10:C18.6",
+            "label": "Intensive Care Unit Stay",
+            "value": "Intensive Care Unit Stay",
+            "ontology": "NCIT:C171454",
             "type": "ontology",
-            "schemaField": "histopathology"
+            "schemaField": "interventionsOrProcedures"
           }
         ],
         [
           {
-            "label": "Transverse colon",
-            "value": "Transverse colon",
-            "ontology": "ICD10:C18.4",
+            "label": "Intubation (procedure)",
+            "value": "Intubation (procedure)",
+            "ontology": "SNOMED:52765003",
             "type": "ontology",
-            "schemaField": "histopathology"
+            "schemaField": "interventionsOrProcedures"
           }
         ],
         [
           {
-            "label": "Hepatic flexure",
-            "value": "Hepatic flexure",
-            "ontology": "ICD10:C18.3",
+            "label": "Oxygen administration by nasal cannula",
+            "value": "Oxygen administration by nasal cannula",
+            "ontology": "SNOMED:371907003",
             "type": "ontology",
-            "schemaField": "histopathology"
-          }
-        ],
-        [
-          {
-            "label": "Splenic flexure",
-            "value": "Splenic flexure",
-            "ontology": "ICD10:C18.5",
-            "type": "ontology",
-            "schemaField": "histopathology"
-          }
-        ],
-        [
-          {
-            "label": "Sigmoid colon",
-            "value": "Sigmoid colon",
-            "ontology": "ICD10:C18.7",
-            "type": "ontology",
-            "schemaField": "histopathology"
-          }
-        ],
-        [
-          {
-            "label": "Caecum",
-            "value": "Caecum",
-            "ontology": "ICD10:C18.0",
-            "type": "ontology",
-            "schemaField": "histopathology"
-          }
-        ],
-        [
-          {
-            "label": "Stage I",
-            "value": "Stage I",
-            "ontology": "NCIT:C27966",
-            "type": "ontology",
-            "schemaField": "histopathology"
-          }
-        ],
-        [
-          {
-            "label": "Stage II",
-            "value": "Stage II",
-            "ontology": "NCIT:C28054",
-            "type": "ontology",
-            "schemaField": "histopathology"
-          }
-        ],
-        [
-          {
-            "label": "Stage III",
-            "value": "Stage III",
-            "ontology": "NCIT:C27970",
-            "type": "ontology",
-            "schemaField": "histopathology"
-          }
-        ],
-        [
-          {
-            "label": "Stage IV",
-            "value": "Stage IV",
-            "ontology": "NCIT:C27971",
-            "type": "ontology",
-            "schemaField": "histopathology"
+            "schemaField": "interventionsOrProcedures"
           }
         ]
       ]
     },
+  
     {
-      "title": "Variant",
-      "type": "input",
+      "title": "Disease",
       "options": [
         [
           {
-            "subTitle": "Mutations in:",
-            "subTitle2": "gene:",
-            "label": "KRAS",
-            "value": "KRAS",
-            "schemaField": "geneId"
-          },
-          {
-            "subTitle2": "aminoacid:",
-            "label": "p.Gly12Cys",
-            "value": "p.Gly12Cys",
-            "schemaField": "aminoacidChange"
+            "label": "COVID-19",
+            "value": "COVID-19",
+            "ontology": "MONDO:0100096",
+            "type": "ontology",
+            "schemaField": "diseases"
           }
         ],
         [
           {
-            "subTitle": "Mutations in:",
-            "subTitle2": "alternateBases:",
-            "label": "T",
-            "value": "T",
-            "schemaField": "alternateBases"
-          },
-          {
-            "subTitle2": "referenceBases:",
-            "label": "C",
-            "value": "C",
-            "schemaField": "referenceBases"
-          },
-          {
-            "subTitle2": "start:",
-            "label": "110173330",
-            "value": "110173330",
-            "schemaField": "start"
-          },
-          {
-            "subTitle2": "end:",
-            "label": "110173331",
-            "value": "110173331",
-            "schemaField": "end"
-          },
-          {
-            "subTitle2": "type:",
-            "label": "SNP",
-            "value": "SNP",
-            "schemaField": "variantType"
+            "label": "Immunocompromised",
+            "value": "Immunocompromised",
+            "ontology": "NCIT:C14139",
+            "type": "ontology",
+            "schemaField": "diseases"
           }
         ],
         [
           {
-            "subTitle": "Mutations in:",
-            "subTitle2": "alternateBases:",
-            "label": "A",
-            "value": "A",
-            "schemaField": "alternateBases"
-          },
-          {
-            "subTitle2": "referenceBases:",
-            "label": "T",
-            "value": "T",
-            "schemaField": "referenceBases"
-          },
-          {
-            "subTitle2": "start:",
-            "label": "1334544",
-            "value": "1334544",
-            "schemaField": "start"
-          },
-          {
-            "subTitle2": "end:",
-            "label": "1334545",
-            "value": "1334545",
-            "schemaField": "end"
-          },
-          {
-            "subTitle2": "type:",
-            "label": "SNP",
-            "value": "SNP",
-            "schemaField": "variantType"
+            "label": "Asthma",
+            "value": "Asthma",
+            "ontology": "NCIT:C28397",
+            "type": "ontology",
+            "schemaField": "diseases"
           }
         ],
         [
           {
-            "subTitle": "Mutations in:",
-            "subTitle2": "gene:",
-            "label": "TP53",
-            "value": "molecularAttributes.geneIds=TP53",
-            "schemaField": "molecularAttributes.geneIds"
+            "label": "Chronic Obstructive Pulmonary Disease",
+            "value": "Chronic Obstructive Pulmonary Disease",
+            "ontology": "NCIT:C3199",
+            "type": "ontology",
+            "schemaField": "diseases"
           }
         ],
         [
           {
-            "subTitle": "Mutations in:",
-            "subTitle2": "gene:",
-            "label": "KRAS",
-            "value": "KRAS",
-            "schemaField": "geneId"
+            "label": "Chronic Kidney Disease",
+            "value": "Chronic Kidney Disease",
+            "ontology": "NCIT:C80078",
+            "type": "ontology",
+            "schemaField": "diseases"
+          }
+        ],
+        [
+          {
+            "label": "Hypertension",
+            "value": "Hypertension",
+            "ontology": "NCIT:C3117",
+            "type": "ontology",
+            "schemaField": "diseases"
+          }
+        ],
+        [
+          {
+            "label": "Organ Transplantation",
+            "value": "Organ Transplantation",
+            "ontology": "NCIT:C15289",
+            "type": "ontology",
+            "schemaField": "diseases"
+          }
+        ],
+        [
+          {
+            "label": "Congestive Heart Failure",
+            "value": "Congestive Heart Failure",
+            "ontology": "NCIT:C3080",
+            "type": "ontology",
+            "schemaField": "diseases"
+          }
+        ],
+        [
+          {
+            "label": "Myocardial Infarction",
+            "value": "Myocardial Infarction",
+            "ontology": "NCIT:C27996",
+            "type": "ontology",
+            "schemaField": "diseases"
+          }
+        ],
+        [
+          {
+            "label": "Stroke",
+            "value": "Stroke",
+            "ontology": "NCIT:C3390",
+            "type": "ontology",
+            "schemaField": "diseases"
+          }
+        ],
+        [
+          {
+            "label": "Deep Vein Thrombosis",
+            "value": "Deep Vein Thrombosis",
+            "ontology": "NCIT:C49343",
+            "type": "ontology",
+            "schemaField": "diseases"
+          }
+        ],
+        [
+          {
+            "label": "Reinfarction During Hospitalization",
+            "value": "Reinfarction During Hospitalization",
+            "ontology": "NCIT:C80480",
+            "type": "ontology",
+            "schemaField": "diseases"
           }
         ]
       ]
