--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,11 +1,9 @@
 version: '3.1'
 
 networks:
-  beacon-priv:
-  idp-priv:
-  pub:
-  my-app-network:
-    external: true
+  beacon-priv-ega:
+  idp-priv-ega:
+  pub-ega:
 
 services:
 
@@ -14,11 +12,10 @@ services:
   ###########################################
 
   beacon-ri-tools:
-    image: ghcr.io/ega-archive/beacon2-ri-tools-v2:main
+    image: beacon2ri/beacon_reference_implementation:v2.0.0
     hostname: beacon-ri-tools
-    container_name: ri-tools
     networks:
-      - beacon-priv 
+      - beacon-priv-ega 
     tty: true
 
   ###########################################
@@ -31,18 +28,25 @@ services:
     #ports:
     #  - 9000:8080
     #networks:
-    #  - beacon-priv
+    #  - beacon-priv-ega
 
   ###########################################
   # MongoDB Database
   ###########################################
 
-  db:
+  dbega:
     image: mongo:5
+    command: mongod --port 27020
     hostname: mongo
-    container_name: rimongo
+    container_name: mongoega
+    deploy:
+      resources:
+        limits:
+          memory: 5120m
+        reservations:
+          memory: 1280m
     ports:
-      - 27017:27017
+      - 27020:27020
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
@@ -50,8 +54,7 @@ services:
     volumes:
       - ./mongo-init/:/docker-entrypoint-initdb.d/:ro
     networks:
-      - beacon-priv
-      - my-app-network
+      - beacon-priv-ega
 
   mongo-express:
     image: mongo-express
@@ -61,19 +64,18 @@ services:
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27020/
     networks:
-      - beacon-priv
+      - beacon-priv-ega
 
   ###########################################
   # Beacon
   ###########################################
 
-  beacon:
+  beaconega:
     build: ..
-    image: egarchive/beacon:2.0
     hostname: beacon
-    container_name: beacon
+    container_name: beaconega
     volumes:
       # - ../beacon:/beacon/beacon  # inject the code, so we see the modifications "live"
       # - ../ui/static:/beacon/ui/static
@@ -81,15 +83,13 @@ services:
       - ./conf.py:/beacon/beacon/conf.py
       - ./logger.yml:/beacon/beacon/logger.yml
       - ../beacon/request/datasets.yml:/beacon/beacon/request/datasets.yml
-      - ../beacon/request/cohorts.yml:/beacon/beacon/request/cohorts.yml
       - ../beacon/request/response_type.yml:/beacon/beacon/request/response_type.yml
     ports:
       - "5050:5050"
     networks:
-      - beacon-priv
-      - pub
-      - idp-priv
-      - my-app-network
+      - beacon-priv-ega
+      - pub-ega
+      - idp-priv-ega
     working_dir: '/beacon'
     entrypoint: ['python','-m','beacon']
     # entrypoint: ['/bin/sleep','100000000']
@@ -98,21 +98,19 @@ services:
   # Dummy Permissions server
   ###########################################
   
-  permissions:
+  permissionsega:
     image: egarchive/beacon:2.0
     hostname: beacon-permissions
-    container_name: beacon-permissions
+    container_name: beacon-permissions-ega
     volumes:
       - ../permissions/:/beacon/permissions/  # inject the code, so we see the modifications "live"
       - ./logger.yml:/beacon/logger.yml
     ports:
-      - "5051:5051"
-      - 8010:8000
+      - "5071:5051"
     networks:
-      - beacon-priv
-      - pub
-      - idp-priv
-      - my-app-network
+      - beacon-priv-ega
+      - pub-ega
+      - idp-priv-ega
     #entrypoint: ['/bin/sleep','100000000']
     working_dir: '/beacon'
     entrypoint: ['python','-m', 'permissions']
@@ -140,7 +138,7 @@ services:
       - DB_ADDR=idp-db
       - DB_PORT=5432
       - DB_DATABASE=keycloak
-      #- DB_SCHEMA=public
+      #- DB_SCHEMA=pub-egalic
       - KEYCLOAK_IMPORT=/tmp/beacon-realm.json -Dkeycloak.profile.feature.upload_scripts=enabled -Dkeycloak.profile.feature.token_exchange=enabled -Dkeycloak.profile.feature.admin_fine_grained_authz=enabled
       - KEYCLOAK_HOSTNAME=localhost
       #- KC_HOSTNAME_URL=https://beacon-network-test2.ega-archive.org
@@ -153,9 +151,8 @@ services:
       - "8080:8080"
       - "9991:8443"
     networks:
-      - pub
-      - idp-priv 
-      - my-app-network
+      - pub-ega
+      - idp-priv-ega 
     depends_on:
       - idp-db
 
@@ -168,8 +165,7 @@ services:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=secret
     networks:
-      - idp-priv 
-      - my-app-network
+      - idp-priv-ega 
   
   frontend:
     build:
