--- a/.github/workflows/push_docker_image.yml
+++ b/.github/workflows/push_docker_image.yml
@@ -1,12 +1,8 @@
 name: Create and publish a Docker image
 
 on:
-  push:
-    branches: ['develop', 'master']
-    tags:
-      - 'v*.*.*'
   pull_request:
-    branches: ['develop', 'master']
+    branches: ['master']
     tags:
       - 'v*.*.*'
 env:
