--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,6 +1,6 @@
 name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [pull request]
+on: [pull request, push]
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
