--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,6 +1,8 @@
 name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [pull request, push]
+on:
+  pull_request:
+  push:
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
